@@ -1,29 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = po libgsm libegg src
+SUBDIRS = po libgsm libegg src ui
 
 EXTRA_DIST = \
 	autogen.sh \
 	intltool-extract.in intltool-merge.in intltool-update.in
-
-install-data-local:
-	@$(NORMAL_INSTALL)
-	if test -d $(srcdir)/ui; then \
-	  $(mkinstalldirs) $(DESTDIR)$(datadir)/$(PACKAGE); \
-	  for uifile in $(srcdir)/ui/*.glade $(srcdir)/ui/*.png $(srcdir)/ui/*.wav; do \
-	    if test -f $$uifile; then \
-	      $(INSTALL_DATA) $$uifile $(DESTDIR)$(datadir)/$(PACKAGE)/; \
-	    fi \
-	  done \
-	fi
-
-dist-hook:
-	if test -d ui; then \
-	  mkdir $(distdir)/ui; \
-	  for uifile in ui/*.glade ui/*.png ui/*.wav; do \
-	    if test -f $$uifile; then \
-	      cp -p $$uifile $(distdir)/ui/; \
-	    fi \
-	  done \
-	fi
 
