@@ -2,11 +2,11 @@
 Encoding=UTF-8
 _Name=Phone Manager
 _Comment=Receive and send text messages from your mobile phone
-Icon=../gnome-phone-manager/cellphone.png
+Icon=cellphone
 Exec=gnome-phone-manager
 Terminal=0
 Type=Application
-Categories=Application;System;
+Categories=Application;System;Telephony;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=phonemgr
 X-GNOME-Bugzilla-Component=phonemgr
