@@ -1,3 +1,11 @@
+2005-11-19  Bastien Nocera  <hadess@hadess.net>
+
+	* Makefile.am:
+	* configure.in:
+	* src/gnome-phone-manager.desktop.in: install the icons and other UI
+	bits by hand, fixes the desktop menu icon not appearing
+	(Closes: #321882)
+
 2005-10-11  Pawan Chitrakar  <pchitrakar@gmail.com>
 
 	* configure.in: Added ne in ALL_LINGUAS
